--- a/photo/templates/photo/detail.html
+++ b/photo/templates/photo/detail.html
@@ -12,6 +12,18 @@
     </div>
     <div class="col-md-4"></div>
 </div>
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4 panel panel-default">
+        Tags :
+        {% load tagging_tags %}
+        {% tags_for_object object as tags %}
+        {% for tag in tags %}
+        <a href="">{{ tag.name }}</a>
+        {% endfor %}
+    </div>
+
+</div>
 
 
 {% endblock %}
